[gd_scene load_steps=9 format=2]

[ext_resource path="res://Assets/Bullet/PhysicalBullet.tscn" type="PackedScene" id=1]
[ext_resource path="res://Assets/Enemies/police_body.tscn" type="PackedScene" id=2]
[ext_resource path="res://Assets/rifle.glb" type="PackedScene" id=3]
[ext_resource path="res://Assets/Enemies/PoliceSniperEnemy_NO_UP_ROTATION.gd" type="Script" id=4]
[ext_resource path="res://Assets/Sounds/gunshot.ogg" type="AudioStream" id=5]

[sub_resource type="BoxShape" id=8]
extents = Vector3( 16.4212, 13.2477, 10.2187 )

[sub_resource type="Animation" id=3]
resource_name = "RECOIL"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("Gun:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 90, 0 ), Vector3( 0, 84, 15 ), Vector3( 2.20872e-08, 90, 8.53774e-07 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Gun:translation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 1.4, 1.1, 0.7 ), Vector3( 1.4, 1.1, 0.8 ) ]
}

[sub_resource type="CapsuleShape" id=5]
radius = 0.870395
height = 2.59279

[node name="SniperEnemy" type="KinematicBody" groups=["enemies"]]
transform = Transform( 1.22247, 0, 0, 0, 1.14906, 0, 0, 0, 1.34735, 0, 0, 0 )
script = ExtResource( 4 )
bullet = ExtResource( 1 )

[node name="Gun" parent="." instance=ExtResource( 3 )]
transform = Transform( -8.74228e-08, 0, 2, 0, 2, 0, -2, 0, -8.74228e-08, 1.4, 1.1, 0.7 )

[node name="Muzzle" type="Spatial" parent="Gun"]
transform = Transform( -1.62921e-07, 0, -1, 3.17637e-21, 1, 0, 1, -1.29718e-17, -1.62921e-07, 0.959829, 0, 2.38419e-07 )

[node name="ShotTimer" type="Timer" parent="."]
autostart = true

[node name="SightRange" type="Area" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.54403, 2.67003, -0.213766 )

[node name="CollisionShape" type="CollisionShape" parent="SightRange"]
transform = Transform( 1, 0, 0, 0, 2.05189, 0, 0, 0, 3.44593, 0, 0, -42.8787 )
shape = SubResource( 8 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/RECOIL = SubResource( 3 )

[node name="GunShotSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
volume_db = -20.0
pitch_scale = 0.9

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -2.71798e-08, -1.21954, 0, 0.6218, -5.33076e-08, 1.81, 0.897016, 0.0999725 )
shape = SubResource( 5 )

[node name="police body" parent="." instance=ExtResource( 2 )]
transform = Transform( -0.8, 0, -6.99382e-08, 0, 0.8, 0, 6.99382e-08, 0, -0.8, 1.865, -1.028, 0.2 )

[node name="arm_left" parent="police body" index="0"]
transform = Transform( 0.999985, 0.00530517, 0.00163586, -0.00552541, 0.979687, 0.200456, -0.000539199, -0.200462, 0.979702, -0.071925, -0.0970855, 0.0199844 )

[node name="arm_right" parent="police body" index="1"]
transform = Transform( 0.856709, 0, 0.515801, 0, 1, 0, -0.515801, 0, 0.856709, 0, 0, 0 )

[node name="Eyes" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.76247, 2.81744, 0 )

[connection signal="was_shot" from="." to="." method="_on_SniperEnemy_was_shot"]
[connection signal="timeout" from="ShotTimer" to="." method="_on_ShotTimer_timeout"]
[connection signal="body_entered" from="SightRange" to="." method="_on_SightRange_body_entered"]
[connection signal="body_exited" from="SightRange" to="." method="_on_SightRange_body_exited"]

[editable path="police body"]
